--- a/R/R4DS_Asian_Chap_1_2_ARU.html
+++ b/R/R4DS_Asian_Chap_1_2_ARU.html
@@ -38,7 +38,7 @@ We'll be covering a different chapter of [R for Data Science](https://r4ds.had.c
 As Hadley and Garret say- 
 
 &gt; "You'll learn how to get your data into R, get it into the most 
-&gt; useful structure, transform it, visualize it and model it.
+&gt; useful structure, transform it, visualize it and model it."
 
 
 &gt; "These are the skills that allow data science to happen, and here you will
@@ -138,6 +138,8 @@ Google the error message. Probably people have encountered it before.
 [Stack Overflow](https://stackoverflow.com/). Thanks to amazing people who solve the questions or if you have your own question then prepare a minimal reproducible example or reprex to ask people for help. 
 
 [R4DS Slack](http://r4ds.io/join)!! 
+
+Twitter.
 
 ---
 
